# ci_cd_playground

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: release.yml
src/: main.cpp  version.cpp.in  version.hpp
